# semantic-steganography

./: .gitignore  AGENT.md  README.md  main.py  pyproject.toml  requirements.txt
scripts/: analyze_results.py  run_coco_ablation.sh  run_debug.sh  run_evaluation.sh  run_evaluation_200.sh  run_standard_evaluation_200.sh
semantic_stego/: __init__.py
semantic_stego/attacks/: __init__.py  attacks.py
semantic_stego/cli/: __init__.py  app.py
semantic_stego/config/: cli_args.py  defaults.py  schemas.py
semantic_stego/data/: __init__.py  coco_loader.py  image_io.py
semantic_stego/detection/: __init__.py  roi_selector.py  yolo_detector.py
semantic_stego/experiments/: grid.py  result_writer.py  runner.py
semantic_stego/metrics/: image_metrics.py  message_metrics.py  timing.py
semantic_stego/stego/: __init__.py  embedder.py  extractor.py  payload.py
semantic_stego/svd/: __init__.py  svd_from_scratch.py  svd_utils.py
tests/: test_attacks.py  test_embed_extract.py  test_metrics.py  test_payload.py  test_roi_selector.py  test_svd.py
